fix(core): `Scrollbar` fix height in Firefox (#4148)

--- a/projects/core/components/scroll-controls/scroll-controls.style.less
+++ b/projects/core/components/scroll-controls/scroll-controls.style.less
@@ -11,6 +11,8 @@
     z-index: 1;
     min-width: calc(100% - 1px);
     min-height: calc(100% - 1px);
+    max-width: calc(100% - 1px);
+    max-height: calc(100% - 1px);
     float: left;
     margin-right: calc(-100% + 1px);
     margin-inline-start: 0;
